--- a/DataView/DataView.csproj
+++ b/DataView/DataView.csproj
@@ -50,11 +50,14 @@
   <ItemGroup>
     <Compile Include="Cut.cs" />
     <Compile Include="FeatureComputer.cs" />
+    <Compile Include="FeatureVector.cs" />
     <Compile Include="IFeatureComputer.cs" />
     <Compile Include="IMatcher.cs" />
     <Compile Include="ISampler.cs" />
     <Compile Include="ITransformer.cs" />
+    <Compile Include="KDTree.cs" />
     <Compile Include="Match.cs" />
+    <Compile Include="Matcher.cs" />
     <Compile Include="PCATester.cs" />
     <Compile Include="PictureMaker.cs" />
     <Compile Include="Point3D.cs" />
