Split Transform3D into Transformer3D and Transform3D. Added special class for computing the rotationTransformation (RotationComputer.cs). In procces of fixing rotation computation

--- a/DataView/DataView.csproj
+++ b/DataView/DataView.csproj
@@ -64,10 +64,12 @@
     <Compile Include="Data.cs" />
     <Compile Include="PointWithFeatures.cs" />
     <Compile Include="RatedPoint.cs" />
+    <Compile Include="RotationComputer.cs" />
     <Compile Include="Sampler.cs" />
     <Compile Include="SamplerFeatureVector.cs" />
     <Compile Include="TestDataBuilder.cs" />
     <Compile Include="Transform3D.cs" />
+    <Compile Include="Transformer3D.cs" />
     <Compile Include="VolumetricData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
