Getters and setters
Small adjustments of classes to reduce number of lines and make code more clear.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 DataView/bin/
 *.raw
-.vs/DataView/v16/Server/sqlite3/storage.ide
+DataView/obj/
+*.chache
+.vs/DataView/v16/.suo
+.vs/DataView/v16/Server/
+*.ide*
