--- a/DataView/DataView.csproj
+++ b/DataView/DataView.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,6 +55,12 @@
     <Compile Include="Cut.cs" />
     <Compile Include="FeatureComputer.cs" />
     <Compile Include="FeatureVector.cs" />
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="IData.cs" />
     <Compile Include="LinearFunction.cs" />
     <Compile Include="IFeatureComputer.cs" />
@@ -71,7 +79,8 @@
     <Compile Include="PointWithFeatures.cs" />
     <Compile Include="RatedPoint.cs" />
     <Compile Include="RotationComputer.cs" />
-    <Compile Include="RotData.cs" />
+    <Compile Include="Test1.cs" />
+    <Compile Include="TransData.cs" />
     <Compile Include="Sampler.cs" />
     <Compile Include="SamplerFeatureVector.cs" />
     <Compile Include="SamplerFake.cs" />
