--- a/DataView/DataView.csproj
+++ b/DataView/DataView.csproj
@@ -80,10 +80,8 @@
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.7.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
-
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
-
     <Reference Include="System.Text.Encodings.Web, Version=4.0.5.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Text.Encodings.Web.4.7.0\lib\netstandard2.0\System.Text.Encodings.Web.dll</HintPath>
     </Reference>
@@ -96,7 +94,6 @@
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
-
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -105,8 +102,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArtificialData.cs" />
-    <Compile Include="Cut.cs" />
     <Compile Include="FeatureComputer.cs" />
     <Compile Include="FeatureVector.cs" />
     <Compile Include="Form1.cs">
@@ -116,22 +111,19 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="IData.cs" />
-    <Compile Include="LinearFunction.cs" />
     <Compile Include="IFeatureComputer.cs" />
-    <Compile Include="IFunction.cs" />
     <Compile Include="IMatcher.cs" />
     <Compile Include="ISampler.cs" />
     <Compile Include="ITransformer.cs" />
     <Compile Include="KDTree.cs" />
     <Compile Include="Match.cs" />
     <Compile Include="Matcher.cs" />
-    <Compile Include="NonLinearFunction.cs" />
     <Compile Include="PCATester.cs" />
     <Compile Include="PictureMaker.cs" />
     <Compile Include="Point3D.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="PointWithFeatures.cs" />
-    <Compile Include="RatedPoint.cs" />
+    <Compile Include="PointRated.cs" />
     <Compile Include="RotationComputer.cs" />
     <Compile Include="Test1.cs" />
     <Compile Include="TransData.cs" />
