--- a/DataView/packages.config
+++ b/DataView/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsvHelper" version="15.0.4" targetFramework="net472" />
   <package id="MathNet.Numerics" version="4.9.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="3.1.2" targetFramework="net472" />
