--- a/DataView/DataView.csproj
+++ b/DataView/DataView.csproj
@@ -36,6 +36,9 @@
     <Reference Include="CsvHelper, Version=15.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
       <HintPath>..\packages\CsvHelper.15.0.4\lib\net47\CsvHelper.dll</HintPath>
     </Reference>
+    <Reference Include="LumenWorks.Framework.IO, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5ad3ea2f85776344, processorArchitecture=MSIL">
+      <HintPath>..\packages\LumenWorksCsvReader.4.0.0\lib\net461\LumenWorks.Framework.IO.dll</HintPath>
+    </Reference>
     <Reference Include="MathNet.Numerics, Version=4.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MathNet.Numerics.4.9.0\lib\net461\MathNet.Numerics.dll</HintPath>
     </Reference>
@@ -106,6 +109,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FeatureComputer.cs" />
+    <Compile Include="FeatureComputerRings.cs" />
+    <Compile Include="FeatureComputerNormedRings.cs" />
     <Compile Include="FeatureVector.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -128,7 +133,7 @@
     <Compile Include="PointWithFeatures.cs" />
     <Compile Include="PointRated.cs" />
     <Compile Include="RotationComputer.cs" />
-    <Compile Include="Test1.cs" />
+    <Compile Include="Test.cs" />
     <Compile Include="TransData.cs" />
     <Compile Include="Sampler.cs" />
     <Compile Include="SamplerFeatureVector.cs" />
