--- a/DataView/packages.config
+++ b/DataView/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CsvHelper" version="15.0.4" targetFramework="net472" />
+  <package id="LumenWorksCsvReader" version="4.0.0" targetFramework="net472" />
   <package id="MathNet.Numerics" version="4.9.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
