Another density method added

--- a/DataView/DataView.csproj
+++ b/DataView/DataView.csproj
@@ -153,6 +153,7 @@
     <Compile Include="TransformSelect\ThreadedExecution.cs" />
     <Compile Include="TransformSelect\Transform3D.cs" />
     <Compile Include="TransformSelect\TestDensity.cs" />
+    <Compile Include="TransformSelect\TestDensityAccurate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
