--- a/DataView/DataView.csproj
+++ b/DataView/DataView.csproj
@@ -154,6 +154,10 @@
     <Compile Include="TransformSelect\Transform3D.cs" />
     <Compile Include="TransformSelect\TestDensity.cs" />
     <Compile Include="TransformSelect\TestDensityAccurate.cs" />
+    <Compile Include="TransformSelect\DensityFastest.cs" />
+    <Compile Include="DataView\FeatureComputerVectorDeviation.cs" />
+    <Compile Include="DataView\PointSurrounding.cs" />
+    <Compile Include="DataView\VolumetricDataDistribution.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
